# C-Space-Simulator

./: .gitignore  Cargo.toml  README.md
docs/: plan.md  tropism_doc.md
src/: engine.rs  lib.rs  main.rs  plant_main.rs
src/control/: mod.rs  simulation_control.rs
src/engines/: cspace_engine.rs  mod.rs  plant_engine.rs
src/gui/: control_window.rs  dev_window.rs  environment_window.rs  mod.rs  plant_diagnostics_window.rs  simulation_window.rs  startup_window.rs
src/plants/: mod.rs  tropisms.rs
src/simulation/: mod.rs  simulation_env.rs  simulation_runner.rs
src/ui/: app.rs  common.rs  main_menu.rs  mod.rs  plant.rs  simulation.rs
