[package]
name = "cs_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cs_simulator"
path = "src/main.rs"

[[bin]]
name = "plant_creator"
path = "src/plant_main.rs"

[dependencies]
eframe = "0.27.2"
egui = "0.24.0"
nalgebra = "0.32.3"
rand = "0.8.5"
