[package]
name = "cs_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.18", features = ["v4_10"] }
gio = "0.18"
cairo-rs = "0.18"
nalgebra = "0.32" # Assuming this is the version you're using
std = "1.74" # For Arc, Mutex, etc.